--- a/template.yaml
+++ b/template.yaml
@@ -16,10 +16,6 @@ Parameters:
     Default: dev123456
     Description: Database password
 
-  IdentityServiceUrl:
-    Type: String
-    Default: ""
-    Description: URL of the Identity Service for auth validation
 
 Globals:
   Function:
@@ -30,20 +26,6 @@ Globals:
       Variables:
         ENVIRONMENT: !Ref Environment
         LOG_LEVEL: INFO
-        
-        # Database
-        DB_HOST: !GetAtt EstoqueDatabase.Endpoint.Address
-        DB_PORT: !GetAtt EstoqueDatabase.Endpoint.Port
-        DB_NAME: estoque_db
-        DB_USER: postgres
-        DB_PASSWORD: !Ref DatabasePassword
-        
-        # Service URLs
-        IDENTITY_SERVICE_URL: !Ref IdentityServiceUrl
-        
-        # AWS
-        AWS_REGION: !Ref AWS::Region
-        AWS_ACCOUNT_ID: !Ref AWS::AccountId
 
 Resources:
   # === INVENTORY CRUD FUNCTIONS ===
@@ -51,7 +33,7 @@ Resources:
   CreateInventoryFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.create_inventory_handler
       Description: Create new inventory record
       Events:
@@ -64,7 +46,7 @@ Resources:
   GetInventoryByProductFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.get_inventory_by_product_handler
       Description: Get inventory by product ID
       Events:
@@ -77,7 +59,7 @@ Resources:
   ListInventoryFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.list_inventory_handler
       Description: List all inventory with pagination
       Events:
@@ -92,7 +74,7 @@ Resources:
   AddStockFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.add_stock_handler
       Description: Add stock to product
       Events:
@@ -105,7 +87,7 @@ Resources:
   RemoveStockFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.remove_stock_handler
       Description: Remove stock from product
       Events:
@@ -118,7 +100,7 @@ Resources:
   AdjustStockFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.adjust_stock_handler
       Description: Adjust stock to new quantity
       Events:
@@ -133,7 +115,7 @@ Resources:
   LowStockReportFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.low_stock_report_handler
       Description: Get low stock report
       Events:
@@ -146,7 +128,7 @@ Resources:
   OutOfStockReportFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.out_of_stock_report_handler
       Description: Get out of stock report
       Events:
@@ -161,7 +143,7 @@ Resources:
   HealthCheckFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: .
       Handler: handlers.estoque_handler.health_check_handler
       Description: Health check endpoint
       Events:
@@ -171,51 +153,12 @@ Resources:
             Path: /health
             Method: GET
 
-  # === DATABASE ===
-
-  EstoqueDatabase:
-    Type: AWS::RDS::DBInstance
-    Properties:
-      DBInstanceIdentifier: !Sub "${Environment}-estoque-db"
-      DBName: estoque_db
-      Engine: postgres
-      EngineVersion: '15.3'
-      MasterUsername: postgres
-      MasterUserPassword: !Ref DatabasePassword
-      DBInstanceClass: db.t3.micro
-      AllocatedStorage: 20
-      StorageType: gp2
-      PubliclyAccessible: true
-      VPCSecurityGroups:
-        - !Ref DatabaseSecurityGroup
-      BackupRetentionPeriod: 7
-      DeleteAutomatedBackups: true
-      DeletionProtection: false
-
-  # === SECURITY ===
-
-  DatabaseSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for Estoque database
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 5432
-          ToPort: 5432
-          CidrIp: 0.0.0.0/0  # Em produção, restringir para VPC
-
 Outputs:
   EstoqueApiUrl:
     Description: "API Gateway endpoint URL for Estoque service"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
     Export:
       Name: !Sub "${Environment}-estoque-api-url"
-
-  DatabaseEndpoint:
-    Description: "Database endpoint"
-    Value: !GetAtt EstoqueDatabase.Endpoint.Address
-    Export:
-      Name: !Sub "${Environment}-estoque-db-endpoint"
 
   # Export function names for monitoring
   CreateInventoryFunctionName:
