--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,3 @@
-# template.yaml - Estoque Service
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: 'Estoque Service - Inventory Management Microservice'
@@ -16,7 +15,6 @@ Parameters:
     Default: dev123456
     Description: Database password
 
-
 Globals:
   Function:
     Runtime: python3.13
@@ -27,9 +25,19 @@ Globals:
         ENVIRONMENT: !Ref Environment
         LOG_LEVEL: INFO
 
+  Api:
+    Auth:
+      DefaultAuthorizer: LambdaAuth
+      AddDefaultAuthorizerToCorsPreflight: false
+      Authorizers:
+        LambdaAuth:
+          FunctionArn: !ImportValue
+            Fn::Sub: "AuthFunctionArn"
+          Identity:
+            Header: Authorization
+
 Resources:
   # === INVENTORY CRUD FUNCTIONS ===
-  
   CreateInventoryFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -70,7 +78,6 @@ Resources:
             Method: GET
 
   # === STOCK MOVEMENT FUNCTIONS ===
-
   AddStockFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -111,7 +118,6 @@ Resources:
             Method: POST
 
   # === REPORTS FUNCTIONS ===
-
   LowStockReportFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -139,7 +145,6 @@ Resources:
             Method: GET
 
   # === UTILITY FUNCTIONS ===
-
   HealthCheckFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -152,6 +157,8 @@ Resources:
           Properties:
             Path: /health
             Method: GET
+            Auth:
+              Authorizer: NONE
 
 Outputs:
   EstoqueApiUrl:
